--- a/PPCMD/Views/_ViewStart.cshtml
+++ b/PPCMD/Views/_ViewStart.cshtml
@@ -4,6 +4,6 @@
 
 @{
     //Layout = Context.User.Identity!.IsAuthenticated ? "_AppLayout" : "_DBLayout";
-    Layout = Context.User.Identity!.IsAuthenticated ? "_LTELayout" : "_Layout";
+    Layout = Context.User.Identity!.IsAuthenticated ? "_AppLayout" : "_Layout";
 }
 
