--- a/PPCMD/Views/Shared/_AppLayout.cshtml
+++ b/PPCMD/Views/Shared/_AppLayout.cshtml
@@ -164,11 +164,11 @@
                      class="hidden absolute right-0 mt-2 w-48 bg-white shadow-lg rounded-xl py-2 border border-gray-200">
 
 
-                    <a asp-controller="Dashboard" asp-action="UserProfile"
+                    <a asp-controller="User" asp-action="Profile"
                        class="block px-4 py-2 text-gray-100 hover:bg-gray-700 rounded-xl">
                         Profile
                     </a>
-                     @* <a href="/Profile" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Profile</a> *@
+                     
                     
                      <form method="post" asp-area="Identity" asp-page="/Account/Logout" class="m-0">
                         <button type="submit" class="w-full text-left px-4 py-2 text-red-600 hover:bg-gray-100">
