--- a/PPCMD/Views/Shared/_AppLayout.cshtml
+++ b/PPCMD/Views/Shared/_AppLayout.cshtml
@@ -19,7 +19,7 @@
         }
     </style>
 </head>
-<body class="bg-gray-100 h-screen flex huninn-regular">
+<body class="bg-blue-700 h-screen flex huninn-regular">
 
     <!-- Sidebar -->
     <aside class="hidden md:flex flex-col w-64 bg-gray-800 rounded-2xl">
@@ -55,6 +55,7 @@
                         <div x-show="open" x-transition class="flex flex-col ml-4">
                             <a asp-action="Index" asp-controller="User" class="px-4 py-2 text-gray-300 hover:bg-gray-700 rounded-lg">Users</a>
                             <a asp-action="CompanyProfile" asp-controller="Dashboard" class="px-4 py-2 text-gray-300 hover:bg-gray-700 rounded-lg">Company Profile</a>
+                            <a asp-action="DutyTypes" asp-controller="Item" class="px-4 py-2 text-gray-300 hover:bg-gray-700 rounded-lg">Duty & Charges</a>
                             <a asp-action="Index" asp-controller="Item" class="px-4 py-2 text-gray-300 hover:bg-gray-700 rounded-lg">Items</a>
                             <a href="#" class="px-4 py-2 text-gray-300 hover:bg-gray-700 rounded-lg">Test Link 2</a>
                             <a href="#" class="px-4 py-2 text-gray-300 hover:bg-gray-700 rounded-lg">Test Link 3</a>
