onto client module

--- a/PPCMD/Views/Shared/_AppLayout.cshtml
+++ b/PPCMD/Views/Shared/_AppLayout.cshtml
@@ -74,7 +74,7 @@
                             </svg>
                         </button>
                         <div x-show="open" x-transition class="flex flex-col ml-4">
-                            <a href="#" class="px-4 py-2 text-gray-300 hover:bg-gray-700 rounded-lg">Test Link 1</a>
+                            <a asp-action="Index" asp-controller="Client" class="px-4 py-2 text-gray-300 hover:bg-gray-700 rounded-lg">Clients</a>
                             <a href="#" class="px-4 py-2 text-gray-300 hover:bg-gray-700 rounded-lg">Test Link 2</a>
                             <a href="#" class="px-4 py-2 text-gray-300 hover:bg-gray-700 rounded-lg">Test Link 3</a>
                         </div>
