--- a/PPCMD/Views/Shared/_AppLayout.cshtml
+++ b/PPCMD/Views/Shared/_AppLayout.cshtml
@@ -57,6 +57,9 @@
                             <a asp-action="CompanyProfile" asp-controller="Dashboard" class="px-4 py-2 text-gray-300 hover:bg-gray-700 rounded-lg">Company Profile</a>
                             <a asp-action="DutyTypes" asp-controller="Item" class="px-4 py-2 text-gray-300 hover:bg-gray-700 rounded-lg">Duty & Charges</a>
                             <a asp-action="Index" asp-controller="Item" class="px-4 py-2 text-gray-300 hover:bg-gray-700 rounded-lg">Items</a>
+                            <a asp-action="Index" asp-controller="Maritime"
+                               class="px-4 py-2 text-gray-300 hover:bg-gray-700 rounded-lg">Maritime</a>
+                                
                             <a href="#" class="px-4 py-2 text-gray-300 hover:bg-gray-700 rounded-lg">Test Link 2</a>
                             <a href="#" class="px-4 py-2 text-gray-300 hover:bg-gray-700 rounded-lg">Test Link 3</a>
                         </div>
